Starting to dick around with front-end stuff using Tailwind

--- a/Source/AllowanceApp.Blazor/Components/Pages/Home.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Home.razor
@@ -5,3 +5,7 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+<div class="grid grid-cols-2 gap-6">
+    <Account Name="Ruby"/>
+    <Account Name="Pepper"/>
+</div>
