--- a/Source/AllowanceApp.Blazor/Components/_Imports.razor
+++ b/Source/AllowanceApp.Blazor/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using AllowanceApp.Blazor
 @using AllowanceApp.Blazor.Components
+@using AllowanceApp.Blazor.Components.Pages
+@using AllowanceApp.Shared.DTO
+@using AllowanceApp.Shared.Utilities
