--- a/Source/AllowanceApp.Blazor/Components/App.razor
+++ b/Source/AllowanceApp.Blazor/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="tailwind.css" />
     <link rel="stylesheet" href="AllowanceApp.Blazor.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
