--- a/Source/AllowanceApp.Blazor/Components/Pages/Counter.razor
+++ b/Source/AllowanceApp.Blazor/Components/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@using System.Diagnostics
 @rendermode InteractiveServer
 
 <PageTitle>Counter</PageTitle>
@@ -7,13 +8,51 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="() => currentCount += amount">Click me</button>
+<button class="btn btn-primary" @onclick="() => currentCount -= amount">Not me</button>
+
+<div class="m-4">
+    <input type="text" @onkeydown="HandleKeyDown"/>
+    <p>Message: @message</p>
+</div>
+
+<div style="border: 1px solid black" @onmouseover="MouseOverDiv" @onmouseout="MouseOutDiv">
+    <p>@divtext</p>
+</div>
 
 @code {
     private int currentCount = 0;
+    private string message = "";
+    private string divtext = "";
 
-    private void IncrementCount()
+    private Stopwatch timer = new();
+
+    [Parameter]
+    public int amount { get; set; } = 1;
+
+    private void HandleInput(ChangeEventArgs e)
     {
-        currentCount++;
+        message = (string)e.Value!;
+    }
+    private void MouseOverDiv(MouseEventArgs args)
+    {
+        divtext = "Whaddap";
+    }
+    private void MouseOutDiv(MouseEventArgs args)
+    {
+        divtext = "";
+    }
+    private void HandleKeyDown(KeyboardEventArgs args)
+    {
+        message = "You are typing...";
+        Thread.Sleep(500);
+        message = "You are not typing.";
+    }
+    private void HandleFocus(FocusEventArgs args)
+    {
+    }
+    private void HandleBlur(FocusEventArgs args)
+    {
+        message = "You are not typing.";
     }
 }
