--- a/Source/AllowanceApp.Blazor/Components/Layout/NavMenu.razor
+++ b/Source/AllowanceApp.Blazor/Components/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="account">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Account
+            </NavLink>
+        </div>
     </nav>
 </div>
 
